# LW_integrator

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BENCHMARK_VALIDATION_REPORT.md  CONSOLIDATION_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LEGACY_COMPATIBILITY_REMOVAL.md  MODULE_ORGANIZATION.md  MODULE_ORGANIZATION_V2.md  PROGRESS_DIARY.md  PROGRESS_SUMMARY.py  RADIATION_REACTION_ANALYSIS.md  README.md  README.txt  README_PRODUCTION.md  README_two_particle_demo_gaussian.md  REFACTORING_SUMMARY.md  adaptive_timestep_algorithm.py  benchmark_original_vs_new.py  bunch_inits.py  comprehensive_integration_test.py  comprehensive_test_results.json  covariant_gamma_corrected.py  covariant_integrator_library.py  covariant_integrator_library_heavyion.py  debug_energy_difference.py  debug_sign_error.ipynb  detailed_force_debug.py  enhanced_adaptive_timestep.py  final_sign_verification.py  final_validation_analysis.py  final_verification_summary.py  force_sign_test.py  gamma_calculation_analysis.py  gaussian_retarded_integrator.py  gaussian_self_consistent_integrator.py  gev_instability_diagnostic.py  gev_simulation_test.py  (+34 more)
LW_local_refs/: E_headon_alg.ipynb  IPAC Cavity Aperture Paper (mm amu ns) v2.ipynb  IPAC Cavity Aperture Paper (mm amu ns) v4.ipynb  IPAC Paper.ipynb  LW_EM_tensor.ipynb  LW_covariant_eoms_BUGGYrs.ipynb  LW_covariant_eoms_STABLE.ipynb  LW_covariant_eoms_v10_compact_back_to_pmmm.ipynb  LW_covariant_eoms_v11.ipynb  LW_covariant_eoms_v12.ipynb  LW_covariant_eoms_v2.ipynb  LW_covariant_eoms_v3-Copy1.ipynb  Untitled.ipynb  (+22 more)
(+245 files in other folders)
